Change containers to sm from md and force min-width to prevent too much responsiveness

--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -3,6 +3,9 @@
     margin-top: 50px;
     margin-bottom: 50px;
   }
+  &.servers-show {
+    min-width: 1170px;
+  }
 }
 
 .palette {
