--- a/app/assets/stylesheets/_server.scss
+++ b/app/assets/stylesheets/_server.scss
@@ -202,11 +202,6 @@
     line-height: 1em;
   }
 
-  .starburst {
-    width: 300px;
-    height: 300px;
-  }
-
 }
 
 // ------------------------- SERVER TIME ----------------------------------- //
