--- a/app/assets/stylesheets/_tables.scss
+++ b/app/assets/stylesheets/_tables.scss
@@ -107,6 +107,7 @@ table > tbody > tr > td {
 .table.report-table > tbody > tr > td:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  word-wrap: break-word;
 }
 
 .table-hover > tbody > tr:hover{
